@@ -1,5 +1,9 @@
 2008-12-05  Scott Ellington  <scott.ellington@gmail.com>
 
+	* Drawing/MapDrawer.cs: add a polyline labelling algorithm
+
+2008-12-05  Scott Ellington  <scott.ellington@gmail.com>
+
 	* Data/Shapefile/Shapefile.cs: fix bug in overload call
 
 	* Data/KeyholeMarkupLanguage.cs: use label field for placemark names if
